# quant-krx-stocks

./: .gitignore  IMPROVEMENTS.md  README.md  USAGE.md  WORK_LOG.md  backtest01.py  backtest_strategy1.py  pyproject.toml  run_all.py  settings.yaml  step1_list.py  step2_data.py  step2_price.py  step3_dashboards.py  step3_signals.py  step4_dashboards.py  step4_selector.py  step5_dashboards.py  step5_index.py  step6_index.py  step_all.py
.github/workflows/: README.md  deploy.yml
core/: backtest.py  backtest_report.py  backtest_runner.py  config.py  console.py  fetcher.py  file.py  finance.py  io.py  message.py  models.py  renderer.py  signals.py  strategy.py  utils.py  visualization.py
templates/: backtest_report.html  correlation_cluster.html  correlation_network.html  dashboard.html  dataframe.html  datatable.html  index.html  list.html  telegram_message.txt
